<resources>
    <string name="app_name">MyGameList</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="forum" translatable="false">Forum</string>
    <string name="search">Search</string>
    <string name="world">World</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="or">or</string>
    <string name="register">Register</string>
    <string name="searchHint">Search...</string>
    <string name="best_games_of_all_time">Best games of all time</string>
    <string name="top_10_just_added">Top 10 just added</string>
    <string name="top_10_upcoming">Top 10 upcoming</string>
    <string name="top_10_games_of_the_moment">Top 10 games of the moment</string>
    <string name="backbutton">Do you want close the app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="my_games">My Games</string>
    <string name="favourite_games">Favourite games</string>
    <string name="stats">Stats</string>
    <string name="following" translatable="false">Following</string>
    <string name="followers" translatable="false">Followers</string>
    <string name="view_all">View all</string>
    <string name="settings">Settings</string>
    <string name="back_to_profile">Back to profile</string>
    <string name="exit">Exit</string>
    <string name="similar_games">Similar games</string>
    <string name="from_the_same_publisher">From the same publisher</string>
    <string name="from_the_same_series">From the same series</string>
    <string name="series">Series:</string>
    <string name="publisher">Publisher:</string>
    <string name="developer">Developer:</string>
    <string name="platform">Platform:</string>
    <string name="add_to_my_list">Add to my list</string>
    <string name="favourite">Favourite</string>
    <string name="friends">Friends</string>
    <string name="search_user_games">Search in user game list...</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="error_fields">You must compile all fields</string>
    <string name="error_email">This email already exists</string>
    <string name="remove_friend">Remove friend</string>
    <string name="remove_request">Remove request</string>
    <string name="accept_request">Accept request</string>
    <string name="release_date">Release date:</string>
    <string name="error_username">This username already exists</string>
    <string name="email_or_username">Email or username</string>
    <string name="exit_message">Do you want to logout?</string>
    <string name="remove_title">Remove account</string>
    <string name="remove_text">Do you really want to remove your account? This action in irreversible</string>
    <string name="remove">Remove</string>
    <string name="friend_requests">Friend requests</string>
    <string name="friend_accepted"> accepted your friend request.</string>
    <string name="friend_request"> sent you a friend request.</string>
    <string name="no_games_added">No games added</string>
    <string name="no_games">No games</string>
    <string name="comment_saved">Comment saved!</string>
    <string name="empty_comment">Your comment is empty!</string>
    <string name="comment_deleted">Comment deleted!</string>
    <string name="programmed">Programmed</string>
    <string name="played">Played</string>
    <string name="playing">Playing</string>
    <string name="add_videogame">Add videogame</string>
    <string name="videogame_score">Score</string>
    <string name="videogame_comments">Comments</string>
    <string name="your_rating">Your rating:</string>
    <string name="add_comment">Add a comment...</string>
    <string name="save_comment">Save</string>
    <string name="delete_comment">Delete</string>
    <string name="games_list_button">Games</string>
    <string name="users_list_button">Users</string>
    <string name="add_friend">Add friend</string>
    <string name="close_app"> Do you want to close the app?</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="set_photo">Set photo</string>
    <string name="modify_infos">Modify infos</string>
    <string name="set_background">Set background</string>
    <string name="remove_profile">Remove profile</string>
    <string name="light_mode" translatable="false">Light mode</string>
    <string name="guide">Guide</string>
    <string name="app_infos">App infos</string>
    <string name="all">All</string>
    <string name="searched">Searched</string>
    <string name="create">Create</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="post_delete">Post delete</string>
    <string name="post_delete_confirm">Do you want do delete your post?</string>
    <string name="delete">Delete</string>
    <string name="medium_score">Medium score:</string>
    <string name="added_videogames">Added videogames:</string>
    <string name="favourite_genres">Top genres</string>
    <string name="favourite_platforms">Top platforms</string>
    <string name="favourite_videogames">Favourite videogames:</string>
    <string name="forum_posts">Forum posts:</string>
    <string name="comments">Comments:</string>
    <string name="comment_likes">Comment likes:</string>
    <string name="top_5_series">Top 5 series</string>
    <string name="not_same_psw">New password not confirmed</string>
    <string name="not_old_psw">Old password is uncorrect</string>
    <string name="password_refreshed">Password refreshed!</string>
    <string name="infos_updated">Infos updated!</string>
    <string name="first_name_dots">First name...</string>
    <string name="last_name_dots">Last name...</string>
    <string name="old_password">Old password...</string>
    <string name="new_password">New password...</string>
    <string name="confirm_password">Confirm password...</string>
    <string name="next_update">Available in the next update</string>
    <string name="write_text">Write text...</string>
    <string name="insert_title">Insert title...</string>
    <string name="username" translatable="false">Username</string>
    <string name="modify_password">Modify password</string>
    <string name="not_friends">Not friends</string>
    <string name="added_to_favourite">Added to favourite!</string>
    <string name="removed_from_favourite">Removed from favourite!</string>
    <string name="added_to_list">Added to your list!</string>
    <string name="removed_from_list">Removed from your list!</string>
    <string name="programmed_p">Programmed</string>
    <string name="playing_p">Playing</string>
    <string name="played_p">Played</string>
    <string name="type_something">Type something...</string>
    <string name="chart_infos">Chart infos</string>
    <string name="genres_chart">In this chart you can see the most added genres, based on your list</string>
    <string name="series_chart">In this chart you can see the most added series, based on your list</string>
    <string name="console_chart">In this chart you can see the most added console, based on your list</string>
    <string name="show_info">Show info</string>
    <string name="account_not_found">Account not found, check your data</string>
</resources>