<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C8000000">

    <HorizontalScrollView
        android:id="@+id/scrollButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayoutSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/cardview_shadow_start_color">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/allGameList"
                android:background="@android:color/transparent"
                android:layout_width="wrap_content"
                android:textSize="14sp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/all"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/programmedGameList"
                android:background="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#AEAAAA"
                android:textSize="14sp"
                android:text="@string/programmed_p"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/playingGameList"
                android:background="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#AEAAAA"
                android:textSize="14sp"
                android:text="@string/playing_p"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/playedGameList"
                android:background="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#AEAAAA"
                android:textSize="14sp"
                android:text="@string/played_p"
                />

        </LinearLayout>

    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/scoreListRecycle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="always"
        android:paddingBottom="50dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/score_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollButtons"/>

</androidx.constraintlayout.widget.ConstraintLayout>