<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/stars"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Activities.LoginActivity">

    <ImageView
        android:id="@+id/virelogologin"
        android:layout_width="250dp"
        android:layout_height="500dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/logologin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="42dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="48dp"
        android:backgroundTint="#FFFFFF"
        android:background="@drawable/round_edit"
        android:hint="@string/email_or_username"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:textSize="16dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#FFFFFF"
        android:background="@drawable/round_edit"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:textSize="16dp"
        android:paddingLeft="10dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/errorLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Error message"
        android:textColor="#F43F09"
        android:textAlignment="center"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:visibility="gone"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login"
        app:cornerRadius="20dp"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="48dp"
        android:backgroundTint="#DF9B13"
        android:foregroundTint="#000000"
        android:text="@string/login"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errorLogin"
        app:layout_constraintVertical_bias="0.1" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/orText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        android:textColor="#FFFFFF"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintVertical_bias="0.1"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register"
        app:cornerRadius="20dp"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="#DF9B13"
        android:foregroundTint="#000000"
        android:text="@string/sign_up"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orText"
        app:layout_constraintVertical_bias="0.1" />

</androidx.constraintlayout.widget.ConstraintLayout>