<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="350dp"
    android:layout_width="match_parent"
    android:background="#C8000000">

    <EditText
        android:id="@+id/newForumTitle"
        android:layout_width="300dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/insert_title"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:background="@drawable/normal_edit"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="visible" />

    <EditText
        android:id="@+id/newForumText"
        android:layout_width="300dp"
        android:layout_height="180dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/write_text"
        android:gravity="top"
        android:paddingTop="10dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:background="@drawable/normal_edit"
        android:textColorHint="@color/black"
        android:maxLines="10"
        android:textSize="16sp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:inputType="textMultiLine"
        android:lines="8"
        android:minLines="6"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newForumTitle"
        android:visibility="visible"/>

    <ScrollView
        android:id="@+id/scrollGames"
        android:layout_width="340dp"
        android:layout_height="250dp"
        android:fillViewport="true"
        android:overScrollMode="always"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioGroup
                android:id="@+id/radioGroupPopup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                >

            </RadioGroup>

        </LinearLayout>

    </ScrollView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/firstLayoutPopup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:visibility="visible">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/newForumCancel"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/requestRed"
            android:foregroundTint="#000000"
            android:text="@android:string/no"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:cornerRadius="20dp"
            app:layout_constraintVertical_bias="0.1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/newForumAdd"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:backgroundTint="@android:color/holo_orange_dark"
            android:foregroundTint="#000000"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:cornerRadius="20dp"
            app:layout_constraintVertical_bias="0.1" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/secondLayoutPopup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:visibility="gone">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/newForumCancel2"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@android:color/holo_orange_dark"
            android:foregroundTint="#000000"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:cornerRadius="20dp"
            app:layout_constraintVertical_bias="0.1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/newForumAdd2"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/requestGreen"
            android:foregroundTint="#000000"
            android:text="@string/create"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:cornerRadius="20dp"
            app:layout_constraintVertical_bias="0.1" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>