<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="300dp"
    android:layout_width="match_parent"
    android:background="#C8000000">

    <EditText
        android:id="@+id/lastPswRefresh"
        android:layout_width="300dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:background="@drawable/normal_edit"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="visible"
        />

    <EditText
        android:id="@+id/newPswRefresh"
        android:layout_width="300dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:background="@drawable/normal_edit"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lastPswRefresh"
        android:visibility="visible"
        />

    <EditText
        android:id="@+id/confirmPsw"
        android:layout_width="300dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:background="@drawable/normal_edit"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newPswRefresh"
        android:visibility="visible"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/errorRefreshPsw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Error message"
        android:textColor="#F43F09"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPsw"
        android:visibility="gone"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/firstLayoutPopup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:visibility="visible">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/refreshPasswordCancel"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/requestRed"
            android:foregroundTint="#000000"
            android:text="@android:string/no"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:cornerRadius="20dp"
            app:layout_constraintVertical_bias="0.1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/refreshPassword"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/requestGreen"
            android:foregroundTint="#000000"
            android:text="@string/save_comment"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:cornerRadius="20dp"
            app:layout_constraintVertical_bias="0.1" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>